# gitrpc

./: .clang-format  .gitignore  BUILD.gn  gitrpc.code-workspace  project_config.json
src/: BUILD.gn  main.cpp
src/app/: App.h  AppImpl.cpp  AppImpl.h
src/base/: .gitignore  BUILD.gn  PropertyMacros.h  StringView.h  Utils.cpp  Utils.h  base64.cpp  base64.h  base_exports.h  common.h  logging.cpp  logging.h
src/base/app/: app_base.cpp  app_base.h
src/base/events/: EventArgMacros.h  EventHub.cpp  EventHub.h
src/base/ipc/: IPCChannel.cpp  IPCChannel.h  IPCTypes.h  PlatformPipe.h
src/base/platform/android/: MessagePumpAndroid.cpp  MessagePumpAndroid.h
src/base/platform/linux/: BUILD.gn  memtrack.cpp  memtrack.h
src/base/platform/linux/dispatcher/: DispatcherTypesLinux.h  MessagePumpEPoll.cpp  MessagePumpEPoll.h  SharedThreadState.h
src/base/platform/linux/ipc/: PlatformPipePosix.cpp
src/base/platform/linux/threading/: PlatformThreadPosix.cpp
src/base/platform/win/: BUILD.gn
src/base/platform/win/dispatcher/: DispatcherTypesWin.h  MessagePumpWin.cpp  MessagePumpWin.h
src/base/platform/win/ipc/: PlatformPipeWin.cpp
src/base/platform/win/threading/: ConditionVariableWin.cpp  PlatformThreadWin.cpp  ThreadLocalStorageWin.cpp
src/base/taskmanager/: BUILD.gn
src/base/taskmanager/dispatcher/: TaskManager.cpp  TaskManager.h  TaskManagerTypes.h
src/base/taskmanager/taskrunner/: Runner.cpp
src/base/taskmanager/thread/: Thread.cpp  ThreadPool.cpp
src/base/taskmanager/thread/platform/common/: PlatformThread.h
src/base/taskmanager/thread/platform/linux/: PlatformThreadPosix.cpp
src/base/threading/: IOWorkerThread.cpp  TaskRunner.cpp  Thread.cpp
src/base/threading/common/: ConditionVariable.h  IOTasks.h  IOWorkerThread.h  PlatformThread.h  TaskRunner.h  Thread.h  thread_types.h
src/base/threading/dispatcher/: Dispatcher.cpp  Dispatcher.h  DispatcherMessagePump.h  DispatcherTypes.h  MessagePump.h  TaskHelpers.h
src/base/threading/tls/: ThreadLocalStorage.h  ThreadLocalTypes.h
src/common/: GRPC.cpp  GRPC.h  GitServiceCommon.h
src/gitrpc-frontend/: main.go
src/gitrpc-frontend/gitrpc/: git_server.go
src/gitrpc-frontend/nexus/: GitService.proto  client.go
src/gitserver/: BUILD.gn  GitServiceImpl.cpp  GitServiceImpl.h  main.cpp
src/gitserver/app/: App.h  AppImpl.cpp  AppImpl.h
src/protocols/: BUILD.gn  GitService.proto  RepoInfoService.proto
src/services/git/: GitRepo.cpp  GitRepo.h  GitServiceAsyncImpl.cpp  GitServiceAsyncImpl.h  GitServiceImpl.cpp  GitServiceImpl.h
src/services/git/repository/: GitRepo.cpp  GitRepo.h  GitRepoCommon.h  RepoProxy.cpp  RepoProxy.h  RepositoryManager.cpp  RepositoryManager.h
src/services/git/requests/: ListRefRequests.cpp  ListRefRequests.h  ReceivePack.cpp  ReceivePack.h  RecvPackStream.cpp  RecvPackStream.h  RepoStateChange.cpp  RepoStateChange.h  WriteReference.cpp  WriteReference.h
