executable("gitrpc-server") {
    deps = [
        "//src/base:base",
        "//external:external",
        "//src/protocols:GitService",
        "//build/config/sanitizers:deps",
        "//src/protocols:RepoInfoService",
    ]
    configs += [
        "//build/config:common",
        "//build/config:linux_flags",
    ]
    sources = [
        "main.cpp",
        "app/App.h",
        "app/AppImpl.h",
        "app/AppImpl.cpp",
        "common/GRPC.h",
        "common/GRPC.cpp",
        "services/git/GitRepo.h",
        "services/git/GitRepo.cpp",
        "common/GitServiceCommon.h",
        "services/git/GitServiceImpl.h",
        "services/git/GitServiceImpl.cpp",
        "services/git/GitServiceAsyncImpl.h",
        "services/git/GitServiceAsyncImpl.cpp",
        "services/git/requests/ReceivePack.h",
        "services/git/requests/ReceivePack.cpp",
        "services/git/requests/RecvPackStream.h",
        "services/git/requests/RecvPackStream.cpp",
        "services/git/requests/WriteReference.h",
        "services/git/requests/WriteReference.cpp",
    ]
}