component("PAL") {
    public_configs = [
        "//build/config:common",
        "//build/config:linux_flags"
    ]
    cflags = [
        "-fPIC"
    ]
    libs = [
    #    "../../external/libs/linux/$target_cpu/libboost_system.a",
    #    "../../external/libs/linux/$target_cpu/libboost_filesystem.a"
    ]
    sources = [
        "ipc/PlatformPipePosix.cpp",
        "threading/PlatformThreadPosix.cpp",
        "threading/ConditionVariablePosix.cpp",
        # "threading/ThreadLocalStoragePosix.cpp",
        "dispatcher/MessagePumpEPoll.cpp",
        "dispatcher/include/MessagePumpEPoll.h",
        "dispatcher/include/DispatcherTypesLinux.h",
    ]
}